# sra-tools

./: .gitattributes  .gitignore  CHANGES  CHANGES.md  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README  README-WINDOWS.txt  README-blastn  README-build  README-config.txt  README-vdb-config  README-vdb-config.txt  README-wget.txt  README.md  USAGE  configuration-assistant.perl  configure  cp.sh  konfigure.perl  os-arch.perl  os-arch.pm  package.pm  win-configure.bat
libs/: CMakeLists.txt  Makefile
libs/ascp/: CMakeLists.txt  Makefile  ascp-priv.h  ascp.c
libs/diagnose/: CMakeLists.txt  Makefile  diagnose.c  endpoint.c
libs/general-writer/: CMakeLists.txt  Makefile  general-writer.cpp  gw-dumper.cpp  utf8-like-int-codec.c
libs/inc/: JSON_ostream.hpp  fingerprint.hpp  flag-stat.hpp  hashing.hpp  qname-stat.hpp  update-bm.sh  update-spdlog.sh  vdb-data.hpp  vdb.hpp
libs/kapp/: CMakeLists.txt  Makefile  main-priv.h  main.c
libs/kxml/: CMakeLists.txt  Makefile  xml.c  xtoc-parsexml.c  xtoc-priv.h  xtoc.c
libs/loader/: CMakeLists.txt  Makefile  alignment-writer.c  common-writer.c  loader-file.c  loader-meta.c  mmarray.c  progressbar.c  queue-file.c  reference-writer.c  sequence-writer.c
libs/ngs-vdb/: CMakeLists.txt  Error.hpp  FragmentBlob.cpp  FragmentBlobIterator.cpp  Makefile  NGS-VDB.cpp  ReferenceBlob.cpp  ReferenceBlobIterator.cpp  VdbAlignment.cpp  VdbReadCollection.cpp  VdbReference.cpp
libs/schema/: CMakeLists.txt  Makefile  SraSchema.cpp
libs/search/: CMakeLists.txt  Makefile  agrep-dp.c  agrep-myers.c  agrep-myersunltd.c  agrep-wumanber.c  debug.h  fgrep-aho.c  fgrep-boyermoore.c  fgrep-dumb.c  nucstrstr.c  search-priv.h  search.c  sw-search.c
libs/vdb-sqlite/: CMakeLists.txt  Makefile  sqlite3vdb.c
ngs/ngs-java/: .gitignore  CMakeLists.txt  Makefile  Makefile.java  Makefile.rules  Makefile.vers  build.xml  configure
ngs/ngs-python/: .gitignore  CMakeLists.txt  Makefile  Makefile.python  Makefile.rules  Makefile.vers  build.xml  setup.py  test-install.sh
ngs/ngs-sdk/: .gitignore  CMakeLists.posix.txt  CMakeLists.txt  CMakeLists.win.txt  CMakeLists.xcode.txt  CONTENTS.txt  Makefile  Makefile.install  Makefile.libs  Makefile.rules  Makefile.vers
test/: CMakeLists.txt  LIBS-GUID.kfg  LIBS-GUID.mkfg  Makefile
test/align/: CMakeLists.txt  Makefile  bamdb.schema  bamfuzz.cpp  indextest.cpp  pileup_estimator.cpp  test-samextract.cpp
test/align-cache/: CMakeLists.txt  Makefile  runtest.sh
test/align-info/: CMakeLists.txt  Makefile
test/bam-load/: .gitignore  CMakeLists.txt  Makefile  test.sam
test/blackbox/: ABS_and_latf-load.txt  Makefile  Readme.txt  acc.txt  build.xml  check_abs.sh  md5.txt  problem_childs.txt  repair.sh  start.sh
test/copycat/: CMakeLists.txt  Makefile  test-bad-name.sh  test-copy.sh
test/driver-tool/: CMakeLists.txt  Makefile  bogus.sh  container_test.sh  fasta_0.sh  fasta_default.sh  fasta_er.sh  fasta_missing_param.sh  fasta_neg_number.sh  fasta_number.sh  good_test.sh  help_fasterq-dump.sh  help_fastq-dump.sh  help_prefetch.sh  help_srapath.sh  no_sdl.sh  split_3.sh  split_e.sh  test-build-version.cpp  test-driver-tool.bat  test-filepath.cpp  test-json-parse.cpp  test-sdl-response.cpp  test-sratools.cpp  test-uuid.cpp  testing.sh  tmp.mkfg  tmp2.mkfg  two_accessions.sh  vdbcache.sh  win32-cmdline-test.cpp
test/dump-test/: Makefile
test/fastdump/: Makefile  copy-default-kfg.sh  test_no_1.sh  test_no_2.sh  verify.sh
test/fasterq-dump/: CMakeLists.txt  Makefile  append-test.sh  fasta_2_line.py  fastq_fasta_vs_fastq-dump.sh  many-threads.sh  run_multiple_tests.sh  slowtest-fasterq-dump-2.sh  slowtest-fasterq-dump.sh  slowtext-fasterq-dump-disk-limits.sh
test/fastq-loader/: .gdb_history  CMakeLists.txt  Makefile  bm.sh  fastq.kfg  runtestcase.sh  test-fastq-loader.cpp  test-id2name.cpp  wb-test-fastq-parse.cpp  wb-test-fastq.cpp
test/fuse/: Makefile  kart-util.sh  remote-fuser-test.c  remote-fuser-test.vers.h  remote_fuser_clean.sh  remote_fuser_common.sh  remote_fuser_test.sh  utils.c  utils.h
test/general-loader/: .gitignore  Makefile  OneColumnDefaultNoWrite.gl  OneColumnOneCellManyChunks.gl  OneColumnOneCellOneChunk.gl  column02  makeinputs  makeinputs.cpp  qq  runtestcase.sh  test-general-loader.cpp  test-general-writer.cpp  test-general-writer.vschema  test-gw-dumper.cpp  testsource.cpp  testsource.hpp
test/install/: .gitignore  Makefile  certs.kfg.2.8.1  default.kfg.2.8.1  vdb-copy.kfg.2.8.1
test/internal/: CMakeLists.txt  Makefile
test/kar/: CMakeLists.txt  Makefile  SRR000123.sra  acc.txt  kar-ntest.sh  kar-srr-test.sh  kar-test.sh  old-kar  test-kar.sh
test/kdbmeta/: CMakeLists.txt  Makefile
test/kget/: .gitignore  CMakeLists.txt  Makefile  NC_011748.1  diff-vs-wget.sh  resolver.kfg  test_kget.py
test/libs/: CMakeLists.txt  Makefile
test/loader/: CMakeLists.txt  Makefile  qfiletest.c  test-loaderfile.cpp
test/loaders/: CMakeLists.txt  Makefile
test/make-read-filter/: CMakeLists.txt  Makefile  expected  gendata.sh  generate-test-data.pl  generate-test-data.py  runtest.sh  test-data.kar
test/network-test/: Makefile  analyze_strace_log.py  network-test.c  network-testing.c  network-testing.h
test/ngs/: CMakeLists.txt  Makefile  test-csra1_pileup.cpp
test/ngs-java/: CMakeLists.txt  Makefile  build.xml  ngs_test_CSRA1.java  ngs_test_lib_load.java
test/ngs-pileup/: CMakeLists.txt  Makefile  qq  runtestcase.sh  test-ngs-pileup.cpp
test/ngs-python/: CMakeLists.txt  Makefile  tests.py
test/pileup-stats/: Makefile  test-ignore-args.sh
test/prefetch/: CMakeLists.txt  Makefile  check-prefetch-out.pl  check-size.pl  dump-vs-prefetch.pl  kart.krt  ncbi1GB.pl  out_dir_and_file.pl  prj_phs710EA_test.ngc  runtests.sh  test-ad-not-cwd.pl  test-hs37d5.pl  test-prefetch.sh  test-quality.cpp  test-quality.pl  test-resume.pl  urls_and_accs.pl  use-AD-as-dir.pl  vdbcache.pl
test/python/: AdditionalSchemaIncludePaths_Multiple.vschema  AdditionalSchemaIncludePaths_Single.vschema  CMakeLists.txt  GeneralWriter_Test.py  Makefile
tools/: .gitignore  CMakeLists.txt  Makefile
(+3983 files in other folders)
